# improving-htr-with-genai

./: README.md  pyproject.toml
.github/workflows/: publish-notebook.yml
examples/: 01_linear_pages.ipynb
examples/data/non_linear/: cod552_11.txt
poc_notebook/: README.md  index.html  lot-books.py  multilingual-transcription.py
poc_notebook/__marimo__/: lot-books.ipynb  multilingual-transcription.ipynb
poc_notebooks/: lot-books.py
poc_notebooks/__marimo__/: lot-books.ipynb
