[project]
name = "improving-htr-with-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "ipykernel>=6.29.5",
    "kraken>=5.3.0",
    "marimo>=0.11.13",
    "openai>=1.64.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "transformers>=4.49.0",
]
